<resources>
    <!-- Titles -->
    <string name="app_name" translatable="false">Organiso</string>
    <string name="settings">Settings</string>
    <string name="new_conversation">New Conversation</string>
    <string name="saved_messages">Favorite Messages</string>
    <string name="new_short">New</string>
    <string name="info">Info</string>
    <string name="interface_settings">Interface</string>
    <string name="message_settings">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="customise_categories">Customise Categories</string>
    <string name="otp">OTP</string>
    <string name="personal">Personal</string>
    <string name="scheduled_messages">Scheduled Messages</string>

    <!-- Actions -->
    <string name="next">continue</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="schedule">Schedule</string>
    <string name="report">Report</string>
    <string name="reply">Reply</string>
    <string name="block">Block</string>
    <string name="move_to">Move to</string>
    <string name="move">Move</string>
    <string name="to">To</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="report_spam">Report Spam</string>
    <string name="share">Share</string>
    <string name="mute">Mute</string>
    <string name="unMute">UnMute</string>
    <string name="call">Call</string>
    <string name="copy_otp">Copy OTP</string>
    <string name="forward">Forward</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="dont_send">Don\'t Send</string>

    <!-- Long Actions -->
    <string name="block_sender_query">Block %1$s?</string>
    <string name="report_sender_as_spam_query">Report %1$s as spam?</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="view_contact">View Contact</string>
    <string name="add_to_home">Add to Home</string>
    <string name="move_conversation_to">Move this conversation to</string>
    <string name="move_conversations_to">Move these conversation(s) to</string>
    <string name="delete_conversation_query">Delete this conversation?</string>
    <string name="delete_msgs_query">Delete selected messages?</string>
    <string name="delete_conversations_query">Delete selected conversations?</string>
    <string name="block_conversations_query">Block selected conversation(s)?</string>
    <string name="report_conversations_query">Report selected conversation(s)?</string>
    <string name="reset_to_default_query">Reset to default?</string>
    <string name="send_scheduled">Schedule Message?</string>
    <string name="delete_all_otps_query">Delete all previous OTPs?</string>


    <!-- Image(Button) Descriptions-->
    <string name="back_button">Back Button</string>
    <string name="app_icon">App Icon</string>
    <string name="more_options">More Options</string>
    <string name="mms">MMS Image</string>
    <string name="display_picture">Display picture</string>

    <string name="drag_handle">Drag Handle</string>
    <string name="select_range">Select Range</string>
    <string name="send_button">Send Button</string>
    <string name="clear_text_button">Clear Text Button</string>
    <string name="go_to_bottom">Go to bottom</string>
    <string name="remove_address">Remove Address Button</string>
    <string name="animated">Transition</string>
    <string name="attach_file">Attach File</string>
    <string name="custom_category_label">custom category label</string>
    <string name="toggle_visibility">Toggle Visibility</string>
    <string name="play_button">Play/Pause Button</string>
    <string name="send_scheduled_message">Send scheduled message</string>
    <string name="draft_message">Draft message</string>
    <string name="add_to_favorite_messages">Add to favorite messages</string>

    <!-- Descriptions -->
    <string name="all_your_messages">All your Messages,</string>
    <string name="organised">Organised.</string>
    <string name="you">You</string>
    <string name="title">Title</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_scheduled_messages">No Scheduled Messages</string>
    <string name="report_a_bug">Report A Bug</string>
    <string name="messages">%1$d message(s)</string>
    <string name="audio_col">Audio: </string>
    <string name="video_col">Video: </string>
    <string name="media_message">Media %1$s</string>
    <string name="copied_in_brackets">(Copied)</string>
    <string name="from_sender">OTP From %1$s</string>

    <string name="delivered">delivered</string>
    <string name="sent">sent</string>
    <string name="queued">queued</string>
    <string name="failed_retry">failed. tap to retry</string>
    <string name="failed">failed</string>
    <string name="drafted">drafted</string>
    <string name="drafted_edit">drafted. tap to edit</string>
    <string name="scheduled_to_sender">scheduled to %1$s</string>
    <string name="insufficient_permissions">Insufficient Permissions</string>

    <string name="x_mins_remaining">%1$d minute(s) remaining</string>
    <string name="x_percent">%1$d%%</string>
    <string name="less_than_min_remaining">Less than a minute remaining</string>
    <string name="just_few_secs">Just a few more seconds</string>
    <string name="finishing_up">Finishing Up</string>

    <string name="this_category_has_no_messages_yet">This category has no messages yet.</string>
    <string name="sending_messages_not_supported">Sender Doesn\'t Support Replies</string>
    <string name="number_blocked">This number is blocked.</string>
    <string name="type_your_message_here">Type your message</string>
    <string name="conversation_is_muted">Conversation is Muted</string>
    <string name="describe_bug_here">Describe bug here</string>

    <string name="visible_category">"Visible on Home Screen"</string>
    <string name="hidden_category">"Hidden Away in Menu"</string>

    <string name="from_contacts">From Contacts</string>
    <string name="messages_in_label">Messages in %1$s</string>
    <string name="no_matches">No Matches</string>
    <string name="thats_all">That\'s All</string>

    <string name="device_details_included">
        Your device model and android version will be included in
        this report to help us identify the problem better.
    </string>


    <string name="getting_your_msgs">Getting your messages</string>
    <string name="organising_your_msgs">Organising your messages</string>
    <string name="done">Done</string>

    <string name="read_privacy_policy">I have read the %1$s.</string>
    <string name="agree_to_tnc">I agree to the %1$s.</string>


    <string name="deleting_otp">Deleting existing OTPs</string>
    <string name="scan_personal_contacts">Scanning personal category</string>

    <!-- Toasts -->
    <string name="bug_report_sent">Bug Report Sent</string>
    <string name="empty_fields">Empty Field(s)</string>
    <string name="sender_blocked">Sender Blocked</string>
    <string name="conversation_moved">Conversation Moved</string>
    <string name="conversation_deleted">Conversation Deleted</string>
    <string name="reported_spam">Sender Reported Spam</string>
    <string name="otp_copied">OTP Copied To Clipboard</string>
    <string name="copied">Copied</string>
    <string name="deleted">Deleted</string>
    <string name="scheduled">Scheduled</string>
    <string name="service_provider_error">Service provider error</string>
    <string name="no_service">No service</string>
    <string name="empty_message">Message is empty!</string>
    <string name="error">Error</string>
    <string name="senders_blocked">Senders Blocked</string>
    <string name="senders_reported_spam">Sender(s) Reported Spam</string>
    <string name="conversations_moved">Conversation(s) Moved</string>
    <string name="cant_hide_last_category">Can\'t hide last category</string>
    <string name="message_was_deleted">Message was deleted</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="cant_send_scheduled_to_past">Can\'t send a scheduled message to past yet</string>

    <!-- Settings -->
    <string name="dark_theme">Dark Theme</string>
    <string name="search_hidden_categories">Search Hidden Categories</string>
    <string name="auto_copy_otp">Automatically Copy OTP</string>
    <string name="auto_delete_otp">Automatically Delete OTP</string>
    <string name="otp_auto_delete_after">OTP will be deleted after 15 minutes.</string>
    <string name="send_reports_query">
        Send a copy of reported spam messages to us so we can
        improve our spam detection and protect users like you?
        \n\nYou can change this later in message settings.
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="report_bug">Report a bug</string>
    <string name="about_app">About App</string>
    <string name="visit_app_website">Visit app website</string>
    <string name="visit_github">Check out the source code</string>
    <string name="license">License</string>
    <string name="yesterday">Yesterday</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="no_action">None</string>
    <string name="navigate_between_categories">Navigate between categories</string>
    <string name="custom__conversation_actions">Custom conversation actions</string>
    <string name="custom_actions">Custom Actions</string>
    <string name="choose_left_swipe">Choose Left Swipe Action</string>
    <string name="choose_right_swipe">Choose Right Swipe Action</string>
    <string name="custom_swipe_action">Swipe Action Settings</string>
    <string name="swipe_strength">Swipe Strength</string>
    <string name="enter_new_line">Enter will add new line</string>
    <string name="enter_send_message">Enter will send message</string>
    <string name="enter_is_send">Enter is send</string>
    <string name="personal_contacts_only">Only show saved contacts in personal category</string>
    <string name="saved_contacts_only_personal">Saved Contacts Only</string>
    <string name="image_col">Image:</string>
    <string name="dual_sim">Dual Sim</string>
    <string name="choose_sim">Select Sim</string>
    <string name="sim_2">Sim 2</string>
    <string name="sim_1">Sim 1</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>