<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:layout="@layout/view_category_pref"
        app:title="@string/personal" >
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_contacts"
            app:key="contacts_only"
            app:allowDividerBelow="false"
            app:title="@string/saved_contacts_only_personal"
            app:summary="@string/personal_contacts_only" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/view_category_pref"
        app:title="@string/otp" >
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_copy"
            app:key="copy_otp"
            app:allowDividerBelow="false"
            app:title="@string/auto_copy_otp"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_themed_delete"
            app:key="delete_otp"
            app:allowDividerBelow="false"
            app:summaryOn="@string/otp_auto_delete_after"
            app:title="@string/auto_delete_otp"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="dual_sim_category"
        android:layout="@layout/view_category_pref"
        app:title="@string/dual_sim" >
        <SwitchPreferenceCompat
            app:summaryOn="@string/sim_2"
            app:summaryOff="@string/sim_1"
            app:defaultValue="false"
            app:icon="@drawable/ic_sim_card"
            app:key="alternate_sim"
            app:allowDividerBelow="false"
            app:title="@string/choose_sim" />
    </PreferenceCategory>

</PreferenceScreen>