<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <com.bruhascended.organiso.common.RadioButtonPreference
            android:title="@string/no_action"
            android:key="action_null"
            app:allowDividerBelow="false"
            android:icon="@drawable/ic_swipe_off"
            android:defaultValue="false"/>
        <com.bruhascended.organiso.common.RadioButtonPreference
            android:title="@string/navigate_between_categories"
            android:icon="@drawable/ic_swipe_tabs"
            app:allowDividerBelow="false"
            android:key="action_navigate"
            android:defaultValue="true"/>
        <com.bruhascended.organiso.common.RadioButtonPreference
            android:title="@string/custom__conversation_actions"
            android:key="action_custom"
            android:icon="@drawable/ic_swipe_custom"
            app:allowDividerBelow="false"
            android:defaultValue="false"/>
    <PreferenceCategory
        android:dependency="action_custom"
        android:key="action_category"
        app:allowDividerBelow="false"
        android:layout="@layout/view_category_pref"
        app:title="@string/custom_actions">
        <SeekBarPreference
            android:max="4"
            app:min="0"
            android:icon="@drawable/ic_touch"
            android:defaultValue="2"
            android:key="swipe_strength"
            app:allowDividerBelow="false"
            android:dependency="action_custom"
            app:title="@string/swipe_strength"/>
        <ListPreference
            app:allowDividerBelow="false"
            android:dependency="action_custom"
            android:icon="@drawable/ic_swipe_left"
            android:title="@string/choose_left_swipe"
            android:key="action_left_swipe"
            android:entries="@array/actions"
            android:entryValues="@array/actions" />
        <ListPreference
            app:allowDividerBelow="false"
            android:dependency="action_custom"
            android:icon="@drawable/ic_swipe_right"
            android:title="@string/choose_right_swipe"
            android:key="action_right_swipe"
            android:entries="@array/actions"
            android:entryValues="@array/actions" />
    </PreferenceCategory>


</PreferenceScreen>