<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_baseline_select_all_24"
        android:orderInCategory="300"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_select_range"
        android:icon="@drawable/ic_single"
        android:orderInCategory="300"
        android:title="@string/select_range"
        app:showAsAction="ifRoom"/>

    <item
        android:icon="@drawable/ic_move"
        android:id="@+id/action_move"
        android:orderInCategory="300"
        android:title="@string/move_to"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_report"
        android:id="@+id/action_report_spam"
        android:orderInCategory="300"
        android:title="@string/report_spam"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_block"
        android:id="@+id/action_block"
        android:orderInCategory="300"
        android:title="@string/block"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="300"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

</menu>