<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
         android:id="@+id/action_search"
         android:orderInCategory="300"
         android:title="@string/search"
         android:icon="@drawable/ic_search"
         app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="300"
         android:title="@string/settings"
         android:icon="@drawable/ic_settings"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_saved"
         android:orderInCategory="300"
         android:title="@string/saved_messages"
         app:showAsAction="never"/>
</menu>