<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/bg_ripple_button"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:padding="7dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:focusable="true" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:clickable="true"
            android:textColor="@color/text_primary_dark"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="textShortMessage"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColorHint="@color/text_secondary_dark"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_ripple_button"
            android:clickable="true"
            android:contentDescription="@string/clear_text_button"
            android:padding="7dp"
            android:tint="#fff"
            android:src="@drawable/close"
            android:focusable="true" />
    </LinearLayout>

    <ListView
        android:id="@+id/searchListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?backgroundColor"
        android:clickable="true"
        android:divider="@null"
        android:elevation="3dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_conversation" />

    <TextView
        android:elevation="10dp"
        android:id="@+id/info"
        android:text="@string/no_matches"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:elevation="20dp"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>